--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,4 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  font-family: "Trebuchet MS", sans-serif;
+  font-size: 14px;
+  line-height: 1.42857143;
+}
