--- a/src/app/home/page.css
+++ b/src/app/home/page.css
@@ -1,6 +1,4 @@
-body{
-  font-family: Helvetica;
-}
+
 .home-cta-btn {
   border-radius: 6px;
   text-transform: uppercase;
@@ -43,6 +41,9 @@ body{
 .home-overlay.top-overlay .home-overlay-img {
   height: 658px;
 }
+.home-overlay.top-overlay-home{
+  display: none;
+}
 .home-banner.industry-banner {
   height: 1500px;
 }
@@ -53,10 +54,13 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url(../../../public/images/home-bg.png);
+  background-color: #000028;
+  background-image: url(../../../public/images/car-five.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position-x: center;
+    height: 100vh;
+    overflow: hidden;
 }
 .electrum-home .home-banner {
   max-height: 658px;
@@ -71,16 +75,17 @@ body{
 }
 .electrum-home .home-banner-text {
   z-index: 2;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  position: absolute;
+  top: 14%;
+  right: -44%
 }
 .electrum-home .home-banner-text div {
   width: 60%;
 }
 .electrum-home .home-banner-text h1,
 .electrum-home .home-banner-text p {
-  color: #fff;
+  color: #33526f;
+  font-weight: 700;
 }
 .electrum-home .home-banner-text h1 {
   margin-bottom: 75px;
@@ -91,7 +96,7 @@ body{
   text-align: center;
   font-size: 24px;
   margin-bottom: 45px;
-  font-weight: 300;
+  font-weight: 700;
 }
 .electrum-industry-cards {
   position: relative;
@@ -110,8 +115,7 @@ body{
   z-index: 2;
   width: 60%;
   position: relative;
-  margin-left: auto;
-  margin-right: auto;
+  
 }
 .electrum-industry-cards .card-container .industry-card.title-card .inner-card {
   background: #394a62;
@@ -141,7 +145,7 @@ body{
   padding: 30px;
 }
 .electrum-industry-cards .card-container .industry-card .inner-card .card-info {
-  height: 270px;
+  height: 245px;
 }
 .electrum-industry-cards
   .card-container
@@ -291,20 +295,19 @@ body{
   width: 100%;
   padding-left: 0;
   padding-right: 0;
-  min-height: 550px;
   background: #fff;
   position: relative;
 }
 .testimonials-div .poly-top {
   position: absolute;
-  top: -46%;
+  top: -56%;
   left: 0;
   z-index: 2;
   width: 100%;
   height: auto;
 }
 .testimonials-div .advantage-div {
-  margin-top: 250px;
+  margin-top: 10%;
   z-index: 1;
   text-align: center;
   margin-bottom: 60px;
@@ -340,7 +343,7 @@ body{
 }
 .electrum-industry-cards .card-container .industry-card .inner-card .card-info p{
   font-weight: 300;
-  margin-top: 20px;
+  margin-top: 15px;
 }
 .bottom-cta {
   display: flex;
@@ -380,6 +383,10 @@ body{
   color: #fff;
   font-weight: 700;
   margin-bottom: 45px;
+}
+
+.col-lg-3{
+  width: 22%;
 }
 
 
