--- a/src/app/home/page.css
+++ b/src/app/home/page.css
@@ -86,6 +86,7 @@
 .electrum-home .home-banner-text p {
   color: #33526f;
   font-weight: 700;
+  color: #fff;
 }
 .electrum-home .home-banner-text h1 {
   margin-bottom: 75px;
