--- a/src/app/singlefamilyresidential/page.css
+++ b/src/app/singlefamilyresidential/page.css
@@ -33,8 +33,11 @@
 }
 .car-one,.car-two,.car-three,.car-four,.car-five{
   background-image: url(../../../public/images/car-one.JPEG);
-  width: 100%;
-  height: 1280px;
+  width: 80%;
+  height: 800px;
+  position: absolute;
+    top: 60%;
+    left: 10%;
 }
 .car-two{
   background-image: url(../../../public/images/car-two.jpg);
@@ -140,7 +143,7 @@
   background: #fff;
   justify-content: center;
   align-items: center;
-  margin-top: 20%;
+  margin-top: 40%;
   margin-left: auto;
   margin-right: auto;
 }
