--- a/src/app/home/page.css
+++ b/src/app/home/page.css
@@ -55,7 +55,7 @@
   justify-content: center;
   align-items: center;
   background-color: #000028;
-  background-image: url(../../../public/images/car-five.jpg);
+  background-image: url(../../../public/images/elctrumbanner2.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position-x: center;
@@ -76,28 +76,42 @@
 .electrum-home .home-banner-text {
   z-index: 2;
   position: absolute;
-  top: 14%;
-  right: -44%
+  top: 25%;
+  left: 0%
 }
 .electrum-home .home-banner-text div {
-  width: 60%;
+  width: 40%;
 }
 .electrum-home .home-banner-text h1,
-.electrum-home .home-banner-text p {
+.electrum-home .home-banner-text h2 {
   color: #33526f;
   font-weight: 700;
   color: #fff;
+  /* color: #000; */
 }
 .electrum-home .home-banner-text h1 {
   margin-bottom: 75px;
   text-align: center;
-  font-size: 56px;
+  font-size: 49px;
 }
-.electrum-home .home-banner-text p {
+.electrum-home .home-banner-text h2 {
   text-align: center;
   font-size: 24px;
   margin-bottom: 45px;
   font-weight: 700;
+}
+.industry-card-main-content{
+  position: relative;
+}
+.industry-card-bg-image{
+  background-image: url(../../../public//images//homepage-geometry1.png);
+  position: absolute; 
+  background-repeat: no-repeat;
+  background-position-x: center;
+  width: 100%;
+  z-index: 1;
+  top: -19%;
+    height: 88px;
 }
 .electrum-industry-cards {
   position: relative;
