--- a/src/moderncomponents/footer.css
+++ b/src/moderncomponents/footer.css
@@ -3,6 +3,7 @@ footer{
     background-color: #33526f;
     color: #fff;
     font-family: 'Trebuchet MS';
+    position: relative;
 }
 .footer-content{
     width: 80%;
@@ -16,12 +17,11 @@ footer{
     font-size: 1.3rem;
     line-height: 1.1em;
     margin: 30px 0;
-    font-weight:500;
 }
-.footer-signup{
+/* .footer-signup{
     width: 30%;
     margin-left: 30px;
-}
+} */
 .footer-signup p{
     margin-bottom: 20px;
     font-size: 18px;
@@ -85,4 +85,25 @@ footer{
     color: #fff;
     font-size: 19px;
     margin-top: 25px;
+}
+.footerlogo{
+    width: 370px !important;
+    margin-left: 0;
+}
+.footer-heading{
+    font-size: 30px !important;
+    font-weight: 700;
+    margin-left: 5px;
+}
+.footer-content,.footer-signup label{
+    font-size: 18px;
+    font-weight: 700 !important;
+}
+
+
+.e-logo{
+    width: 160px;
+    position: absolute;
+    left: 1%;
+    top: 10%
 }
