--- a/src/app/about/About.css
+++ b/src/app/about/About.css
@@ -249,24 +249,14 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  background-image: url(../../../public/images/bottom-geometry-mask.png);
+  background-image: url(../../../public/images/single-banner.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position-x: center;
   width: 100%;
-  height: 510px;
+  height: 800px;
 }
-.bottom-cta .bottom-overlay {
-  position: absolute;
-  left: 0;
-  top: 0;
-  background-image: url(../../../public/images/bottom-poly-stroke.png);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position-x: center;
-  width: 100%;
-  height: 510px;
-}
+
 .bottom-cta .bottom-cta-text {
   text-align: center;
   margin: 0;
@@ -337,7 +327,7 @@
   display: flex;
   gap: 10px;
   left: 50%;
-  bottom: -37vh;
+  bottom: -24%;
   transform: translateX(-50%);
   width: 100%;
   z-index: 2;
@@ -348,7 +338,7 @@
   border-radius: 6px;
 }
 .electrum-about .quotes-info {
-  min-height: 1100px;
+  min-height: 600px;
   display: flex;
   justify-content: center;
   align-items: center;
