--- a/src/app/home/page.css
+++ b/src/app/home/page.css
@@ -85,14 +85,13 @@
 .electrum-home .home-banner-text h1,
 .electrum-home .home-banner-text h2 {
   color: #33526f;
-  font-weight: 700;
-  color: #fff;
+  
   /* color: #000; */
 }
 .electrum-home .home-banner-text h1 {
   margin-bottom: 75px;
   text-align: center;
-  font-size: 49px;
+  
 }
 .electrum-home .home-banner-text h2 {
   text-align: center;
@@ -236,30 +235,48 @@
 .card-link a {
   text-decoration: none;
 }
+.process-info-inner-content{
+  background-image: url(../../../public/images/planning.jpg);
+  width: 100%;
+  height: 800px;
+  background-repeat: no-repeat;
+  position: relative;
+  background-size: cover;
+  background-position: center;
+}
 .process-info {
-  text-align: left;
+  width: 90%;
+  position: absolute;
+  bottom: 4%;
+  left: 9%;
+  color: black;
+  font-family: sans-serif;
 }
-.process-info-heading {
+.process-info h2 {
   font-size: 40px;
-  font-weight: 500;
-  text-align: left;
+  font-weight: 700;
 }
-.step-info h5 {
+.process-info h5 {
   font-size: 30px;
-  font-weight: 300;
+  font-weight: 700;
   margin: 30px 0;
-  text-align: left;
   text-transform: uppercase;
 }
 .process-info p {
-  font-size: 16px;
-  text-align: left;
+  font-size: 25px;
+  font-weight: 700;
+}
+.process-info-right-content{
+  background-image: url(../../../public/images/single-banner.jpg);
+  width: 50%;
+  height: 800px;
 }
 
 .insights-div {
+  background-image: url(../../../public/images/bulb.jpg);
   width: 100%;
   padding: 0;
-  background: #394a62;
+  /* background: ; */
   position: relative;
   text-align: center;
   min-height: 600px;
@@ -365,23 +382,17 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  background-image: url(../../../public/images/bottom-geometry-mask.png);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position-x: center;
-  width: 100%;
-  height: 510px;
+  
 }
 .bottom-cta .bottom-overlay {
-  position: absolute;
   left: 0;
   top: 0;
-  background-image: url(../../../public/images/bottom-poly-stroke.png);
+  background-image: url(../../../public/images/single-banner.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position-x: center;
   width: 100%;
-  height: 510px;
+  height: 800px;
 }
 .bottom-cta .bottom-cta-text {
   text-align: center;
