--- a/src/components/form.css
+++ b/src/components/form.css
@@ -1,6 +1,6 @@
 .page-banner.electrum-banner {
     position: relative;
-    background-image: url(../../public/images/page-banner-background.png);
+    background-image: url(../../public/images/blue-bg.jpg);
     width: 100%;
     height: auto;
     min-height: 658px;
@@ -8,18 +8,7 @@
     background-size: cover;
     background-repeat: no-repeat;
   }
-  .banner-overlay {
-    height: auto;
-    min-height: 658px;
-    background-image: url(../../public/images/page-banner-overlay.svg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position-x: center;
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-  }
+  
   .page-banner-text {
     z-index: 2;
     width: 100%;
@@ -159,6 +148,50 @@
   .electrum-contact .contact-details .detail-div .detail-info a {
     font-weight: lighter;
     text-decoration: none;
+  }
+  .bottom-cta {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    background-image: url(../../public/images/single-banner.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position-x: center;
+    width: 100%;
+    height: 800px;
+  }
+  
+  .bottom-cta .bottom-cta-text {
+    text-align: center;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 3;
+    background: 0 0;
+  }
+  .bottom-cta .bottom-cta-text h2 {
+    font-size: 40px;
+    color: #fff;
+    font-weight: 700;
+    margin-bottom: 45px;
+  }
+  .home-cta-btn {
+    border-radius: 6px;
+    text-transform: uppercase;
+    font-size: 16px;
+    color: #03488d;
+    background-color: #f2d499;
+    max-width: 152px;
+    max-height: 58px;
+    padding: 15px 20px;
+    display: block;
+    margin: 0 auto;
+    text-decoration: none;
+    text-align: center;
+    font-weight: 700;
   }
   
   @media screen and (max-width: 1400px) {
