--- a/src/components/getintouch.css
+++ b/src/components/getintouch.css
@@ -42,7 +42,7 @@
     text-transform: uppercase;
     font-size: 16px;
     color: #03488d;
-    background-color: #f2d499;
+    background-color: aqua;
     max-width: 152px;
     max-height: 58px;
     padding: 15px 20px;
