--- a/src/moderncomponents/navbar.css
+++ b/src/moderncomponents/navbar.css
@@ -5,7 +5,7 @@ header{
 }
 
 nav{
-    background-color: #33526f;
+    background-color: #000103;
     display: flex;
     justify-content: space-between;
     align-items: center;
