--- a/src/app/fleet/fleetprojects.css
+++ b/src/app/fleet/fleetprojects.css
@@ -30,3 +30,8 @@
 .fleet-image{
     width: 750px;
 }
+.fleet-left-content,.fleet-inner-heading{
+    font-family: cursive;
+    font-size: 22px;
+    font-weight: 600;
+}
