--- a/src/moderncomponents/dropdown.css
+++ b/src/moderncomponents/dropdown.css
@@ -2,7 +2,7 @@
     position: absolute;
     z-index: 1;
     left: 60%;
-    background-color: #394a62;
+    background-color: #000103;
     border-radius: 10px;
     width: 250px;
     transition-duration: 1s;
