--- a/src/app/home/BannerSlider.css
+++ b/src/app/home/BannerSlider.css
@@ -2,19 +2,20 @@
   width: 100%;
   height: 700px;
 }
+
 .slider-content h3,
 .slider-content p {
   font-weight: bolder;
   color: #fff;
-  font-size: 49px;
+  font-size: 60px;
 }
 .carousel-caption {
-  width: 40%;
+  width: 45%;
   left: 0% !important;
-  top: 35%;
+  top: 40%;
 }
 .slider-content p {
-  font-size: 25px;
+  font-size: 28px;
 }
 .caption {
   display: none;
@@ -22,4 +23,19 @@
 .caption h3,
 .caption p {
   color: #000;
+}
+.carousel-control-prev,
+.carousel-control-next {
+  display: none;
+}
+.slider-content {
+  text-align: left;
+  color: white; /* or light yellow */
+  text-shadow: 1px 1px 2px black; /* or dark green */
+  background: rgba(0, 128, 0, 0.5); /* semi-transparent dark green */
+  padding: 10px;
+  font-size: 24px;
+  font-family: Arial, sans-serif;
+  border-radius: 10px;
+  padding: 10px 10px 10px 20px;
 }
