--- a/src/components/slider.css
+++ b/src/components/slider.css
@@ -1,7 +1,9 @@
 .slider-container {
     padding: 0 30px;
     width: 100%;
-    background-color: #e9f5f6;
+    background-color: rgba(173, 216, 230, 0.8);
+    /* background-color: rgba(211, 211, 211, 0.8); */
+
 }
 .slick-prev:before, .slick-next:before{
     display: none;
