--- a/src/moderncomponents/contactModal.css
+++ b/src/moderncomponents/contactModal.css
@@ -1,6 +1,6 @@
 .contact-button{
     text-transform: uppercase;
-    background-color: aqua;
+    background-color: #ffd166;
     color: #fff;
     font-weight: 800;
     padding: 10px;
