--- a/src/app/about/About.css
+++ b/src/app/about/About.css
@@ -261,7 +261,7 @@
   background-repeat: no-repeat;
   background-position-x: center;
   width: 100%;
-  height: 800px;
+  height: 635px;
 }
 
 .bottom-cta .bottom-cta-text {
@@ -284,8 +284,8 @@
   border-radius: 6px;
   text-transform: uppercase;
   font-size: 16px;
-  color: #03488d;
-  background-color: #f2d499;
+  color: black;
+  background-color: #ffd166;
   max-width: 152px;
   max-height: 58px;
   padding: 15px 20px;
@@ -295,9 +295,7 @@
   text-align: center;
   font-weight: 700;
 }
-.electrum-about {
-  background-color: #000103;
-}
+
 .testimonials-div {
   width: 100%;
   padding-left: 0;
@@ -351,6 +349,32 @@
   width: 80%;
   margin: 0 auto;
 }
+.mission-heading {
+  font-size: 56px;
+  font-weight: 700;
+  color: #394a62;
+  margin-bottom: 15%;
+}
+.leadership-section {
+  padding: 50px 0;
+  text-align: center;
+}
+.leadership-section h2 {
+  font-size: 40px;
+  font-weight: 700;
+  color: #394a62;
+  margin-bottom: 30px;
+}
+.leadership-main-content{
+  display: flex;
+  justify-content: space-around;
+}
+.leadership-inner-content h4{
+  font-size: 30px;
+}
+.leadership-inner-content p{
+  font-size: 20px;
+}
 
 /* Responsive */
 
@@ -374,8 +398,8 @@
   width: 50%;
   max-height: 600px;
   margin: 0 auto;
-  margin-top: 10%;
   text-align: center;
+  margin-bottom: 10%;
 }
 
 .electrum-about .our-story .our-story-container {
@@ -383,7 +407,6 @@
   min-height: 600px;
 }
 .electrum-about .our-story .our-story-container .story-info {
-  width: 80%;
   margin: 0 auto;
 }
 .electrum-about .our-story .our-story-container .story-imgs {
