--- a/src/app/home/BannerSlider.css
+++ b/src/app/home/BannerSlider.css
@@ -11,18 +11,17 @@
 }
 .carousel-caption {
   width: 45%;
-  left: 0% !important;
   top: 40%;
 }
 .slider-content p {
-  font-size: 28px;
+  font-size: 26px;
 }
 .caption {
-  display: none;
+  display: block;
 }
 .caption h3,
 .caption p {
-  color: #000;
+  color: #fff;
 }
 .carousel-control-prev,
 .carousel-control-next {
@@ -30,12 +29,22 @@
 }
 .slider-content {
   text-align: left;
-  color: white; /* or light yellow */
-  text-shadow: 1px 1px 2px black; /* or dark green */
-  background: rgba(0, 128, 0, 0.5); /* semi-transparent dark green */
+  color: #fff; /* or light yellow */
+  text-shadow: 1px 1px 2px black; 
+  /* background:  rgba(173, 216, 230, 0.8);  */
+  /* background: rgba(0, 50, 100, 0.8); */
+  background-color: rgba(0, 50, 100, 0.1);
   padding: 10px;
   font-size: 24px;
   font-family: Arial, sans-serif;
   border-radius: 10px;
   padding: 10px 10px 10px 20px;
+  height: 300px;
 }
+.carousel-caption {
+  width: 50%;
+  right: 0% !important;
+  top: 8%;
+  left: 51% ;
+}
+
