--- a/src/app/home/page.css
+++ b/src/app/home/page.css
@@ -2,8 +2,8 @@
   border-radius: 6px;
   text-transform: uppercase;
   font-size: 16px;
-  color: #03488d;
-  background-color: aqua;
+  color: black;
+  background-color: #ffd166;
   max-width: 152px;
   max-height: 58px;
   padding: 15px 20px;
@@ -343,7 +343,7 @@
   height: auto;
 } */
 .testimonials-div .advantage-div {
-  margin-top: 10%;
+  margin-top: 4%;
   z-index: 1;
   text-align: center;
   margin-bottom: 60px;
@@ -402,7 +402,7 @@
   background-repeat: no-repeat;
   background-position-x: center;
   width: 100%;
-  height: 800px;
+  height: 635px;
 }
 .bottom-cta .bottom-cta-text {
   text-align: center;
@@ -450,13 +450,12 @@
 }
 .industry-cards-content p {
   margin: 15px 0;
-  font-size: 16px;
-  font-size: 19px;
-  font-weight: 700;
+  font-size: 17px;
+  font-weight: lighter;
 }
 .industry-cards-content a {
   color: #03488d;
-  font-size: 19px;
+  font-size: 17px;
   font-weight: 700;
 }
 .smart-inner-content {
@@ -599,4 +598,46 @@
   .electrum-home .home-banner-text div {
     width: 80%;
   }
+}
+
+
+
+.insights {
+  background-image: url(../../../public/images/bulb.jpg); /* Dark blue for bottom section */
+  padding: 20px;
+  color: #ffffff; /* White text */
+  text-align: center;
+}
+.insights h2{
+  font-size: 42px
+}
+.features {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap; /* Allow wrapping for smaller screens */
+  padding: 20px;
+}
+
+.feature {
+  text-align: center;
+  flex: 1;
+  min-width: 150px; /* Ensure responsiveness */
+  margin: 10px;
+}
+
+.feature img {
+  width: 100px;
+  height: 100px;
+  margin: 0 auto;
+  margin-bottom: 10px;
+
+}
+
+.feature h3 {
+  margin-bottom: 10px;
+  font-size: 20px;
+    font-weight: bolder
+}
+.feature p{
+  font-size: 16px
 }
