--- a/src/components/form.css
+++ b/src/components/form.css
@@ -159,7 +159,7 @@
     background-repeat: no-repeat;
     background-position-x: center;
     width: 100%;
-    height: 800px;
+    height: 635px;
   }
   
   .bottom-cta .bottom-cta-text {
@@ -192,6 +192,12 @@
     text-decoration: none;
     text-align: center;
     font-weight: 700;
+  }
+  #send{
+    margin-top: 10px;
+  }
+  .captcha{
+    margin-left: 10px;
   }
   
   @media screen and (max-width: 1400px) {
