--- a/src/moderncomponents/dropdown.css
+++ b/src/moderncomponents/dropdown.css
@@ -1,12 +1,12 @@
 .drop-content {
     position: absolute;
     z-index: 1;
-    left: 60%;
-    background-color: #000103;
+    left: 71%;
+    background-color: #394B62;
     border-radius: 10px;
     width: 250px;
     transition-duration: 1s;
-    margin-top: 1.3%;
+    margin-top: 0.5%;
   }
   .drop-content ul li {
     padding: 5px 0;
@@ -17,7 +17,7 @@
     font-size: 16px;
   }
   .drop-content ul li a:hover{
-    color: #2DD3FA;
+    color: #ffd166;
   }
   .drop-content ul {
     margin: 5px;
