--- a/src/moderncomponents/dropdown.css
+++ b/src/moderncomponents/dropdown.css
@@ -1,4 +1,4 @@
-.drop-content {
+/* .drop-content {
     position: absolute;
     z-index: 1;
     left: 71%;
@@ -24,4 +24,4 @@
     padding: 6px;
   }
  
-  
+   */
