--- a/src/components/form.css
+++ b/src/components/form.css
@@ -182,8 +182,8 @@
     border-radius: 6px;
     text-transform: uppercase;
     font-size: 16px;
-    color: #03488d;
-    background-color: aqua;
+    color: black;
+    background-color: #ffd166;
     max-width: 152px;
     max-height: 58px;
     padding: 15px 20px;
