--- a/src/components/getintouch.css
+++ b/src/components/getintouch.css
@@ -3,23 +3,12 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    background-image: url(../../public/images/bottom-geometry-mask.png);
+    background-image: url(../../public/images/single-banner.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position-x: center;
     width: 100%;
     height: 635px;
-  }
-  .bottom-cta .bottom-overlay {
-    position: absolute;
-    left: 0;
-    top: 0;
-    background-image: url(../../public/images/bottom-poly-stroke.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position-x: center;
-    width: 100%;
-    height: 510px;
   }
   .bottom-cta .bottom-cta-text {
     text-align: center;
